fix: improve dark mode

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -16,77 +16,9 @@ body {
     --body-text-color: theme('colors.neutral.200');
   }
 
-  // app bar
-  .app-bar {
-    @apply transition-colors duration-300;
-
-    --app-bar-bg-color: theme('colors.neutral.900');
-    --app-bar-color: theme('colors.neutral.200');
-  }
-
-  // button
-  .btn {
-    &.btn-default:not(:disabled),
-    &.btn-dark:not(:disabled) {
-      --btn-text-color: theme('colors.neutral.200');
-      &.btn--text {
-          --btn-text-color: theme('colors.gray.200');
-
-          &:hover {
-          --btn-text-color: theme('colors.white');
-        }
-      }
-    }
-
-    // text
-    &.btn--text {
-      --btn-text-color: theme('colors.gray.200');
-    }
-
-    &.btn-dark:not(:disabled) {
-      --btn-bg-color: theme('colors.neutral.800') !important; 
-      --btn-border-color: theme('colors.neutral.800') !important; 
-    }
-
-    // dark
-    &.btn-getting-started:not(:disabled) {
-      --btn-bg-color: theme('colors.neutral.900') !important;
-      --btn-border-color: theme('colors.primary.500') !important;
-    }
-  }
-
-  // icon
-  .v-icon {
-    color: theme('colors.gray.200') !important;
-  }
-
-  // card
-  .card {
-    --card-bg-color: theme('colors.neutral.800');
-    --card-color: theme('colors.neutral.200');
-  }
-
-  // menus
-  .v-menus-items {
-    --v-menus-bg-color: theme('colors.neutral.800');
-    --v-menus-item-text-color: theme('colors.neutral.200');
-    --v-menus-item-hover-bg-color: theme('colors.neutral.700');
-    --v-menus-item-hover-text-color: theme('colors.neutral.200');
-  }
-
-  // dropdown
-  .dropdown {
-    --dropdown-item-color: theme('colors.neutral.200');
-
-    &-panel {
-      background-color: theme('colors.neutral.800');
-    }
-
-    &-item {
-      &:hover {
-        background-color: theme('colors.neutral.700');
-      }
-    }
+  // change default app bar dark mode bg color
+  .app-bar-default {
+    --app-bar-bg-color: theme('colors.neutral.900') !important;
   }
 }
 
